frames position changed

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <div class="nav">
-                <img src="Wall-images/gallaryLogo.png" style="margin: 7px 10px 0 10px   ;" alt="Logo" width="40"
+            <div id="title" class="nav">
+                <img  src="Wall-images/gallaryLogo.png" style="margin: 7px 10px 0 10px   ;" alt="Logo" width="40"
                     height="40">
                 Memory Wall
             </div>
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="dropdown-toggle item" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a id="item1" class="dropdown-toggle item" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Theme
                         </a>
                         <ul class="dropdown-menu">
@@ -37,7 +37,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="dropdown-toggle item" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                        <a id="item2" class="dropdown-toggle item" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Change Frame
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" onclick="light()">Frame 1</a></li>
+                            <li><a class="dropdown-item" onclick="dark()">Frame 2</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a  id="item3" class="dropdown-toggle item" role="button" data-bs-toggle="dropdown" aria-expanded="false"
                             style="text-align: right;">
                             Contact The Creator
                         </a>
@@ -54,33 +67,24 @@
         </div>
     </nav>
 
-    <div class="float-parent-element">
-        <div class="float-child-element">
-            <div id="image1" class="red"></div>
-        </div>
-        <div class="float-child-element">
-            <div id="image2" class="yellow"></div>
-        </div>
-        <div class="float-child-element">
-            <div id="image3" class="blue"></div>
-        </div>
+
+    <div class="containerA">
+        <div class="image1" id="image1"></div>
+        <div class="image2" id="image2"></div>
+        <div class="image3" id="image3"></div>
     </div>
-    <div class="float-parent-elementf">
-        <div class="float-child-element">
-            <div class="red"><img class="image1f" src="Wall-images/frame02.png" alt=""></div>
-        </div>
-        <div class="float-child-element">
-            <div class="yellow"><img class="image2f" src="Wall-images/frame07.png" alt=""></div>
-        </div>
-        <div class="float-child-element">
-            <div class="yellow"><img class="image3f" src="Wall-images/frame04.png" alt=""></div>
-        </div>
+
+    <div class="containerD">
+        <div class="image1"><img class="img1" src="Wall-images/frame02.png" alt=""></div>
+        <div class="image2"><img class="img2" src="Wall-images/frame02.png" alt=""></div>
+        <div class="image3"><img class="img2" src="Wall-images/frame02.png" alt=""></div>
     </div>
-   
-    <p class="heading" id="heading"> A Man's Best Friend</p>
-    <button class="buttons" id="next" onclick="next()">
-        Click To See More <img src="Wall-images/dog-emoji-by-google.png" alt="" width="30px" height="30px"> &#8594
-    </button>
+
+    <div class="containerB">
+        <p>Man's Best Friend</p>
+    </div>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
