--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a id="item1" class="d         ropdown-toggle item" role="button" data-bs-toggle="dropdown"
+                        <a id="item1" class="dropdown-toggle item" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Theme
                         </a>
@@ -37,7 +37,7 @@
             </div>
             <div>
 
-                <button class="button" id="refresh" onclick="next()">See More Of <img src="Wall-images/dog-emoji-by-google.png" alt="dog-logo"
+                <button class="button" id="refresh" onclick="next()">See More Of <img class="logo" src="Wall-images/dog-emoji-by-google.png" alt="dog-logo"
                         width="30px" height="30px"></button>
 
             </div>
@@ -92,9 +92,9 @@
 
     </div>
 
-    <div class="containerB">
+    <!-- <div class="containerB">
         <p>Man's Best Friend</p>
-    </div>
+    </div> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
