mobile compatibility added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="title" class="nav">
                 <img src="Wall-images/gallaryLogo.png" style="margin: 7px 10px 0 10px   ;" alt="Logo" width="40"
                     height="40">
-                Memory Wall
+                <p class="nav nav1">Memory Wall</p>
             </div>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
